--- a/src/styles.css
+++ b/src/styles.css
@@ -1,11 +1,11 @@
 /* Application-wide Styles */
 h1 {
-  color: #369;
+  color: rgb(126, 180, 235);
   font-family: Arial, Helvetica, sans-serif;
   font-size: 250%;
 }
 h2, h3 {
-  color: #444;
+  color: #5a0a0a;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: lighter;
 }
@@ -29,7 +29,7 @@ button {
   margin-top: 1rem;
 }
 button:hover {
-  background-color: black;
+  background-color: rgb(0, 0, 0);
   color: white;
 }
 button:disabled {
