--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -8,11 +8,4 @@
   </li>
 </ul>
 
-<div *ngIf="selectedHero">
-  <h2>{{selectedHero.name | uppercase}} 詳細資料</h2>
-  <div>id: {{selectedHero.id}}</div>
-  <div>
-    <label for="hero-name">英雄名稱：</label>
-    <input id="hero-name" [(ngModel)]="selectedHero.name" placeholder="name">
-  </div>
-</div>
+<app-hero-detail [hero]="selectedHero"></app-hero-detail>
