--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
 <h1>{{title}}</h1>
-<app-heroes></app-heroes>
+<nav>
+  <a routerLink="/dashboard">首頁</a>
+  <a routerLink="/heroes">英雄清單</a>
+</nav>
+<router-outlet></router-outlet>
 <app-messages></app-messages>
