--- a/src/app/hero-detail/hero-detail.component.html
+++ b/src/app/hero-detail/hero-detail.component.html
@@ -1,8 +1,9 @@
 <div *ngIf="hero">
-  <h2>{{hero.name | uppercase}} 詳細資料</h2>
-  <div>id: {{hero.id}}</div>
+  <h2>{{ hero.name | uppercase }} 詳細資料</h2>
+  <div>id: {{ hero.id }}</div>
   <div>
     <label for="hero-name">英雄名稱：</label>
-    <input id="hero-name" [(ngModel)]="hero.name" placeholder="name">
+    <input id="hero-name" [(ngModel)]="hero.name" placeholder="name" />
   </div>
+  <button type="button" (click)="goBack()">返回</button>
 </div>
