feat:[Angular練習] 6. 從伺服器獲取資料 "取得清單"、"取得單一資料"、"修改"、"新增"、"刪除"方法修改為從資料庫抓取、補充註解、搜尋未完成

--- a/src/app/hero-detail/hero-detail.component.html
+++ b/src/app/hero-detail/hero-detail.component.html
@@ -5,5 +5,6 @@
     <label for="hero-name">英雄名稱：</label>
     <input id="hero-name" [(ngModel)]="hero.name" placeholder="name" />
   </div>
+  <button type="button" (click)="save()">存檔</button>
   <button type="button" (click)="goBack()">返回</button>
 </div>
