--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -3,5 +3,19 @@
     <a routerLink="/detail/{{ hero.id }}">
       <span class="badge">{{ hero.id }}</span> {{ hero.name }}
     </a>
+    <button type="button" class="刪除英雄" title="delete hero" (click)="delete(hero)">砍 X</button>
   </li>
 </ul>
+
+<div>
+  <label for="new-hero">英雄名稱：</label>
+  <input id="new-hero" #heroName />
+
+  <button
+    type="button"
+    class="add-button"
+    (click)="add(heroName.value); heroName.value = ''"
+  >
+    新增英雄
+  </button>
+</div>
